--- a/style.css/style.css
+++ b/style.css/style.css
@@ -67,6 +67,9 @@ footer a {
   letter-spacing: 0.02em;
 }
 header li a {
+  transition-property: background-color, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--h-and-li-cl);
   text-decoration: none;
   font-weight: 500;
@@ -230,6 +233,16 @@ ul {
   color: var(--a-focus-cl);
 }
 
+.current::after {
+  content: '';
+  border: 2px solid var(--a-focus-cl);
+  border-radius: 2px;
+  position: relative;
+  width: 100%;
+  top: 27px;
+  display: block;
+}
+
 /* позиционирование */
 
 html {
@@ -271,6 +284,9 @@ img {
 }
 
 .telma-item {
+  transition-property: background-color, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   margin-left: 50px;
   display: flex;
   align-items: center;
@@ -386,6 +402,9 @@ img {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-link {
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   display: block;
 }
 
@@ -408,6 +427,9 @@ img {
   padding-bottom: 20px;
 }
 .footer-addres a {
+  transition-property: background-color, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   padding-bottom: 9px;
 }
@@ -471,6 +493,9 @@ img {
   margin-right: 30px;
 }
 .clients-link {
+  transition-property: border, fill, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   border: 1px solid #afb1b8;
   border-radius: 4px;
   display: flex;
@@ -479,6 +504,11 @@ img {
   width: 100%;
   height: 100%;
   fill: #afb1b8;
+}
+.clients-icon {
+  transition-property: border, fill, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:focus .clients-icon,
 .clients-link:hover .clients-icon {
@@ -530,6 +560,9 @@ img {
   border-radius: 50%;
   background-color: var(--hero-cl);
   color: var(--a-focus-cl);
+  transition-property: background-color, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .soc-icon-link:focus .soc-icon,
 .soc-icon-link:hover .soc-icon {
@@ -566,6 +599,9 @@ img {
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
   color: var(--a-focus-cl);
+  transition-property: background-color, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-soc-icon-link:focus .footer-soc-icon,
 .footer-soc-icon-link:hover .footer-soc-icon {
