--- a/style.css/style.css
+++ b/style.css/style.css
@@ -361,7 +361,27 @@ img {
   flex-wrap: wrap;
   margin-left: -30px;
 }
+.p-hero {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: #fff;
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 23%;
+  bottom: 0;
+  left: 0;
+  background: rgba(47, 48, 58, 0.8);
+  text-transform: uppercase;
+  text-align: center;
+  padding-top: 27px;
+  padding-bottom: 27px;
+}
 .foto {
+  position: relative;
   margin-left: 30px;
   flex-basis: calc((100% - 30px * var(--work-foto)) / var(--work-foto));
 }
@@ -547,6 +567,7 @@ img {
 .soc-icon-item {
   width: 44px;
 }
+
 .soc-icon-item:not(:last-child) {
   margin-right: 10px;
 }
@@ -560,7 +581,7 @@ img {
   border-radius: 50%;
   background-color: var(--hero-cl);
   color: var(--a-focus-cl);
-  transition-property: background-color, color;
+  transition-property: background-color, fill, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -599,7 +620,7 @@ img {
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
   color: var(--a-focus-cl);
-  transition-property: background-color, color;
+  transition-property: background-color, color, fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
