--- a/style.css/style.css
+++ b/style.css/style.css
@@ -147,6 +147,50 @@ footer .logo-studio {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  backdrop-filter: blur(2px);
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+}
+.modal {
+  position: relative;
+  width: 520px;
+  height: 580px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+}
+.exit {
+  top: 0;
+  right: 0;
+  margin-right: 8px;
+  margin-top: 8px;
+  position: fixed;
+  border-radius: 50%;
+  color: black;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 30px;
+  height: 30px;
+  padding: 0px;
+  background-color: #fff;
+}
+.is-hidden {
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.is-hidden:hover {
+  opacity: 1;
+}
 
 .hero-section {
   display: flex;
