--- a/style.css/style.css
+++ b/style.css/style.css
@@ -101,6 +101,9 @@ button {
   cursor: pointer;
   background: #f5f4fa;
   border-radius: 4px;
+  transition-property: background-color, color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 a {
   text-decoration: none;
@@ -152,7 +155,7 @@ footer .logo-studio {
   top: 0;
   left: 0;
   z-index: 100;
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(3px);
   background-color: rgba(0, 0, 0, 0.4);
   width: 100%;
   height: 100%;
@@ -471,7 +474,29 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   display: block;
 }
-
+.position {
+  overflow: hidden;
+  position: relative;
+}
+.p-block {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 63px 24px 63px 24px;
+  background-color: rgba(33, 150, 243, 0.9);
+  font-family: Roboto;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.services-item:hover .p-block {
+  transform: translateY(0);
+}
 .team-foto:not(:first-child) {
   margin-left: 30px;
 }
